--- a/index.html
+++ b/index.html
@@ -4,71 +4,89 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo-link" href="./index.html"
+          ><span class="header-web">Web</span
+          ><span class="header-studio">Studio</span></a
+        >
 
-        <ul>
-          <li><a href="/">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+        <ul class="nav-list list">
+          <li class="nav-item"><a href="/" class="nav-link">Studio</a></li>
+          <li class="nav-item"><a href="/" class="nav-link">Portfolio</a></li>
+          <li class="nav-item"><a href="/" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-contacts">
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="contacts-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="main-button">Order Service</button>
       </section>
-      <section>
-        <h2>Profit</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="profit-section">
+        <h2 hidden>Profit</h2>
+        <ul class="profit-block">
+          <li class="profit-list">
+            <h3 class="profit-title">Strategy</h3>
+            <p class="profit-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="profit-title">Punctuality</h3>
+            <p class="profit-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="profit-title">Diligence</h3>
+            <p class="profit-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="profit-title">Technologies</h3>
+            <p class="profit-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="work-section">
+        <h2 class="work-title">What are we doing</h2>
+        <ul class="work-block">
+          <li class="work-img-list">
             <img src="./images/img1.jpg" alt="Computer" width="360" />
           </li>
           <li>
@@ -79,10 +97,10 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-block">
+          <li class="team-img-list">
             <img
               src="./images/img4.jpg"
               alt="Mark Guerrero"
@@ -111,8 +129,11 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo-link" href="./index.html"
+        ><span class="footer-web">Web</span
+        ><span class="footer-studio">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
