--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo-link" href="./index.html"
+          ><span class="header-web">Web</span
+          ><span class="header-studio">Studio</span></a
+        >
 
         <ul>
           <li><a href="/">Studio</a></li>
@@ -26,13 +36,15 @@
     </header>
     <main>
       <section>
-        <h1>Portfolio</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <h1 hidden>Portfolio</h1>
+        <ul class="btn-list">
+          <li><button type="button" class="portfolio-btn">All</button></li>
+          <li><button type="button" class="portfolio-btn">Web Site</button></li>
+          <li><button type="button" class="portfolio-btn">App</button></li>
+          <li><button type="button" class="portfolio-btn">Design</button></li>
+          <li>
+            <button type="button" class="portfolio-btn">Marketing</button>
+          </li>
         </ul>
         <ul>
           <li>
@@ -102,8 +114,11 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo-link" href="./index.html"
+        ><span class="footer-web">Web</span
+        ><span class="footer-studio">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
