--- a/index.html
+++ b/index.html
@@ -13,41 +13,51 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="body">
+    <!--Header section-->
     <header class="header">
       <nav class="header-nav">
         <a class="logo-link" href="./index.html"
           ><span class="header-web">Web</span
           ><span class="header-studio">Studio</span></a
         >
-
+        <!--Nav section-->
         <ul class="nav-list list">
-          <li class="nav-item"><a href="/" class="nav-link">Studio</a></li>
-          <li class="nav-item"><a href="/" class="nav-link">Portfolio</a></li>
-          <li class="nav-item"><a href="/" class="nav-link">Contacts</a></li>
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Studio</a>
+          </li>
+          <li class="nav-item">
+            <a href="./portfolio.html" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Contacts</a>
+          </li>
         </ul>
       </nav>
+      <!--Contacts section-->
       <address class="header-contacts">
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a class="contacts-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a href="tel:+110001111111" class="contacts-link"
+            <a class="contacts-link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
       </address>
     </header>
-    <main>
+    <!--Main section-->
+    <main class="main">
       <section class="main-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="main-button">Order Service</button>
       </section>
-      <section class="profit-section">
+      <!--Description section-->
+      <section class="profit section">
         <h2 hidden>Profit</h2>
         <ul class="profit-block">
           <li class="profit-list">
@@ -83,54 +93,88 @@
           </li>
         </ul>
       </section>
-      <section class="work-section">
+      <!--Work-img section-->
+      <section class="work section">
         <h2 class="work-title">What are we doing</h2>
         <ul class="work-block">
           <li class="work-img-list">
-            <img src="./images/img1.jpg" alt="Computer" width="360" />
+            <img
+              class="img-computer"
+              src="./images/img1.jpg"
+              alt="Computer"
+              width="360"
+            />
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="Screen" width="360" />
+            <img
+              class="img-screen"
+              src="./images/img2.jpg"
+              alt="Screen"
+              width="360"
+            />
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="Smartphones" width="360" />
+            <img
+              class="img-smartphones"
+              src="./images/img3.jpg"
+              alt="Smartphones"
+              width="360"
+            />
           </li>
         </ul>
       </section>
-      <section class="team-section">
+      <!--Personal-img section-->
+      <section class="team section">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-block">
           <li class="team-img-list">
             <img
+              class="mark-picture"
               src="./images/img4.jpg"
               alt="Mark Guerrero"
               height="260"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title-picture">Mark Guerrero</h3>
+            <p class="text-picture">Product Designer</p>
           </li>
           <li>
-            <img src="./images/img5.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <img
+              class="tom-picture"
+              src="./images/img5.jpg"
+              alt="Tom Ford"
+              width="264"
+            />
+            <h3 class="title-picture">Tom Ford</h3>
+            <p class="text-picture">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img6.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <img
+              class="camila-picture"
+              src="./images/img6.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3 class="title-picture">Camila Garcia</h3>
+            <p class="text-picture">Marketing</p>
           </li>
           <li>
-            <img src="./images/img7.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <img
+              class="daniele-picture"
+              src="./images/img7.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3 class="title-picture">Daniel Wilson</h3>
+            <p class="text-picture">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <!--Footer section-->
+    <footer class="footer">
       <a class="logo-link" href="./index.html"
-        ><span class="footer-web">Web</span
+        ><span class="header-web">Web</span
         ><span class="footer-studio">Studio</span></a
       >
       <p class="footer-text">
