--- a/portfolio.html
+++ b/portfolio.html
@@ -13,109 +13,176 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
-    <header>
-      <nav>
+  <body class="body portfolio">
+    <!--Header section-->
+    <header class="header">
+      <nav class="header-nav">
         <a class="logo-link" href="./index.html"
           ><span class="header-web">Web</span
           ><span class="header-studio">Studio</span></a
         >
-
-        <ul>
-          <li><a href="/">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+        <!--Nav section-->
+        <ul class="nav-list list">
+          <li class="nav-item"><a href="/" class="nav-link">Studio</a></li>
+          <li class="nav-item"><a href="/" class="nav-link">Portfolio</a></li>
+          <li class="nav-item"><a href="/" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <!--Contacts section-->
+      <address class="header-contacts">
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="contacts-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
-    <main>
-      <section>
+    <!--Main section-->
+    <main class="main-portfoglio">
+      <!--Btn section-->
+      <section class="aside-section">
         <h1 hidden>Portfolio</h1>
-        <ul class="btn-list">
-          <li><button type="button" class="portfolio-btn">All</button></li>
-          <li><button type="button" class="portfolio-btn">Web Site</button></li>
-          <li><button type="button" class="portfolio-btn">App</button></li>
-          <li><button type="button" class="portfolio-btn">Design</button></li>
-          <li>
+        <ul class="btn-aside">
+          <li class="btn-list">
+            <button type="button" class="portfolio-btn">All</button>
+          </li>
+          <li class="btn-list">
+            <button type="button" class="portfolio-btn">Web Site</button>
+          </li>
+          <li class="btn-list">
+            <button type="button" class="portfolio-btn">App</button>
+          </li>
+          <li class="btn-list">
+            <button type="button" class="portfolio-btn">Design</button>
+          </li>
+          <li class="btn-list">
             <button type="button" class="portfolio-btn">Marketing</button>
           </li>
         </ul>
-        <ul>
-          <li>
+        <!--Pic-item section-->
+        <ul class="aside-pic item">
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img8.jpg" alt="interface" width="360" />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p></a
+              ><img
+                class="pic-banking"
+                src="images/img8.jpg"
+                alt="interface"
+                width="360"
+              />
+              <h2 class="item-title">Banking App Interface Concept</h2>
+              <p class="item-text">App</p></a
             >
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img9.jpg" alt="payment" width="360" />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              ><img
+                class="pic-cashless"
+                src="images/img9.jpg"
+                alt="payment"
+                width="360"
+              />
+              <h2 class="item-title">Cashless Payment</h2>
+              <p class="item-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img10.jpg" alt="app" width="360" />
-              <h2>Meditation App</h2>
-              <p>App</p></a
+              ><img
+                class="pic-meditation"
+                src="images/img10.jpg"
+                alt="app"
+                width="360"
+              />
+              <h2 class="item-title">Meditation App</h2>
+              <p class="item-text">App</p></a
             >
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img11.jpg" alt="service" width="360" />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p></a
+              ><img
+                class="pic-taxi"
+                src="images/img11.jpg"
+                alt="service"
+                width="360"
+              />
+              <h2 class="item-title">Taxi Service</h2>
+              <p class="item-text">Marketing</p></a
             >
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img12.jpg" alt="illustrations" width="360" />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p></a
+              ><img
+                class="pic-screen"
+                src="images/img12.jpg"
+                alt="illustrations"
+                width="360"
+              />
+              <h2 class="item-title">Screen Illustrations</h2>
+              <p class="item-text">Design</p></a
             >
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img13.jpg" alt="courses" width="360" />
-              <h2>Online Courses</h2>
-              <p>Marketing</p></a
+              ><img
+                class="pic-courses"
+                src="images/img13.jpg"
+                alt="courses"
+                width="360"
+              />
+              <h2 class="item-title">Online Courses</h2>
+              <p class="item-text">Marketing</p></a
             >
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img14.jpg" alt="instagram" width="360" />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p></a
+              ><img
+                class="pic-instagram"
+                src="images/img14.jpg"
+                alt="instagram"
+                width="360"
+              />
+              <h2 class="item-title">Instagram Stories Concept</h2>
+              <p class="item-text">Design</p></a
             >
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img15.jpg" alt="food" width="360" />
-              <h2>Organic Food</h2>
-              <p>Web Site</p></a
+              ><img
+                class="pic-food"
+                src="images/img15.jpg"
+                alt="food"
+                width="360"
+              />
+              <h2 class="item-title">Organic Food</h2>
+              <p class="item-text">Web Site</p></a
             >
           </li>
-          <li>
+          <li class="item-list">
             <a href="/"
-              ><img src="images/img16.jpg" alt="coffee" width="360" />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p></a
+              ><img
+                class="pic-coffee"
+                src="images/img16.jpg"
+                alt="coffee"
+                width="360"
+              />
+              <h2 class="item-title">Fresh Coffee</h2>
+              <p class="item-text">Web Site</p></a
             >
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <!--Footer section-->
+    <footer class="footer">
       <a class="logo-link" href="./index.html"
-        ><span class="footer-web">Web</span
+        ><span class="header-web">Web</span
         ><span class="footer-studio">Studio</span></a
       >
       <p class="footer-text">
