--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,18 @@
     <!--Header section-->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo-link" href="./index.html"
-          ><span class="header-web">Web</span
-          ><span class="header-studio">Studio</span></a
+        <a class="header-web" href="./index.html"
+          >Web<span class="header-studio">Studio</span></a
         >
         <!--Nav section-->
         <ul class="nav-list list">
-          <li class="nav-item"><a href="/" class="nav-link">Studio</a></li>
-          <li class="nav-item"><a href="/" class="nav-link">Portfolio</a></li>
-          <li class="nav-item"><a href="/" class="nav-link">Contacts</a></li>
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Studio</a>
+          </li>
+          <li class="nav-item">
+            <a href="./portfolio.html" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
       <!--Contacts section-->
@@ -72,7 +75,7 @@
             <a href="/"
               ><img
                 class="pic-banking"
-                src="images/img8.jpg"
+                src="./images/img8.jpg"
                 alt="interface"
                 width="360"
               />
@@ -84,7 +87,7 @@
             <a href="/"
               ><img
                 class="pic-cashless"
-                src="images/img9.jpg"
+                src=",/images/img9.jpg"
                 alt="payment"
                 width="360"
               />
@@ -96,7 +99,7 @@
             <a href="/"
               ><img
                 class="pic-meditation"
-                src="images/img10.jpg"
+                src="./images/img10.jpg"
                 alt="app"
                 width="360"
               />
@@ -108,7 +111,7 @@
             <a href="/"
               ><img
                 class="pic-taxi"
-                src="images/img11.jpg"
+                src="./images/img11.jpg"
                 alt="service"
                 width="360"
               />
@@ -120,7 +123,7 @@
             <a href="/"
               ><img
                 class="pic-screen"
-                src="images/img12.jpg"
+                src="./images/img12.jpg"
                 alt="illustrations"
                 width="360"
               />
@@ -132,7 +135,7 @@
             <a href="/"
               ><img
                 class="pic-courses"
-                src="images/img13.jpg"
+                src="./images/img13.jpg"
                 alt="courses"
                 width="360"
               />
@@ -144,7 +147,7 @@
             <a href="/"
               ><img
                 class="pic-instagram"
-                src="images/img14.jpg"
+                src="./images/img14.jpg"
                 alt="instagram"
                 width="360"
               />
@@ -156,7 +159,7 @@
             <a href="/"
               ><img
                 class="pic-food"
-                src="images/img15.jpg"
+                src="./images/img15.jpg"
                 alt="food"
                 width="360"
               />
@@ -168,7 +171,7 @@
             <a href="/"
               ><img
                 class="pic-coffee"
-                src="images/img16.jpg"
+                src="./images/img16.jpg"
                 alt="coffee"
                 width="360"
               />
@@ -181,9 +184,8 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <a class="logo-link" href="./index.html"
-        ><span class="header-web">Web</span
-        ><span class="footer-studio">Studio</span></a
+      <a class="header-web" href="./index.html"
+        >Web<span class="footer-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
