--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <!--Header section-->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo-link" href="./index.html"
-          ><span class="header-web">Web</span
-          ><span class="header-studio">Studio</span></a
+        <a class="header-web" href="./index.html"
+          >Web<span class="header-studio">Studio</span></a
         >
         <!--Nav section-->
         <ul class="nav-list list">
@@ -173,9 +172,8 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <a class="logo-link" href="./index.html"
-        ><span class="header-web">Web</span
-        ><span class="footer-studio">Studio</span></a
+      <a class="header-web" href="./index.html"
+        >Web<span class="footer-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
