--- a/portfolio.html
+++ b/portfolio.html
@@ -17,30 +17,32 @@
     <!--Header section-->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-web" href="./index.html"
+        <a class="header-web link" href="./index.html"
           >Web<span class="header-studio">Studio</span></a
         >
         <!--Nav section-->
         <ul class="nav-list list">
           <li class="nav-item">
-            <a href="./index.html" class="nav-link">Studio</a>
+            <a class="nav-link link" href="./index.html">Studio</a>
           </li>
           <li class="nav-item">
-            <a href="./portfolio.html" class="nav-link">Portfolio</a>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+          <li class="nav-item">
+            <a class="nav-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <!--Contacts section-->
       <address class="header-contacts">
-        <ul class="contacts-list">
+        <ul class="contacts-list list">
           <li class="contacts-item">
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a href="tel:+110001111111" class="contacts-link"
+            <a class="contacts-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -52,7 +54,7 @@
       <!--Btn section-->
       <section class="aside-section">
         <h1 hidden>Portfolio</h1>
-        <ul class="btn-aside">
+        <ul class="btn-aside list">
           <li class="btn-list">
             <button type="button" class="portfolio-btn">All</button>
           </li>
@@ -70,7 +72,7 @@
           </li>
         </ul>
         <!--Pic-item section-->
-        <ul class="aside-pic item">
+        <ul class="aside-pic list">
           <li class="item-list">
             <a href="/"
               ><img
@@ -87,7 +89,7 @@
             <a href="/"
               ><img
                 class="pic-cashless"
-                src=",/images/img9.jpg"
+                src="./images/img9.jpg"
                 alt="payment"
                 width="360"
               />
@@ -184,7 +186,7 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <a class="header-web" href="./index.html"
+      <a class="header-web link" href="./index.html"
         >Web<span class="footer-studio">Studio</span></a
       >
       <p class="footer-text">
