--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
     <!--Header section-->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-web" href="./index.html"
+        <a class="header-web link" href="./index.html"
           >Web<span class="header-studio">Studio</span></a
         >
         <!--Nav section-->
         <ul class="nav-list list">
           <li class="nav-item">
-            <a href="./index.html" class="nav-link">Studio</a>
+            <a class="nav-link link" href="./index.html">Studio</a>
           </li>
           <li class="nav-item">
-            <a href="./portfolio.html" class="nav-link">Portfolio</a>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Contacts</a>
+            <a class="nav-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!--Contacts section-->
       <address class="header-contacts">
-        <ul class="contacts-list">
+        <ul class="contacts-list list">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
+            <a class="contacts-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -58,7 +58,7 @@
       <!--Description section-->
       <section class="profit section">
         <h2 hidden>Profit</h2>
-        <ul class="profit-block">
+        <ul class="profit-block list">
           <li class="profit-list">
             <h3 class="profit-title">Strategy</h3>
             <p class="profit-text">
@@ -95,7 +95,7 @@
       <!--Work-img section-->
       <section class="work section">
         <h2 class="work-title">What are we doing</h2>
-        <ul class="work-block">
+        <ul class="work-block list">
           <li class="work-img-list">
             <img
               class="img-computer"
@@ -125,7 +125,7 @@
       <!--Personal-img section-->
       <section class="team section">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-block">
+        <ul class="team-block list">
           <li class="team-img-list">
             <img
               class="mark-picture"
@@ -172,7 +172,7 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <a class="header-web" href="./index.html"
+      <a class="header-web link" href="./index.html"
         >Web<span class="footer-studio">Studio</span></a
       >
       <p class="footer-text">
