--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
         <!--Pic-item section-->
         <ul class="aside-pic list">
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-banking"
                 src="./images/img8.jpg"
@@ -86,7 +86,7 @@
             >
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-cashless"
                 src="./images/img9.jpg"
@@ -98,7 +98,7 @@
             </a>
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-meditation"
                 src="./images/img10.jpg"
@@ -110,7 +110,7 @@
             >
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-taxi"
                 src="./images/img11.jpg"
@@ -122,7 +122,7 @@
             >
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-screen"
                 src="./images/img12.jpg"
@@ -134,7 +134,7 @@
             >
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-courses"
                 src="./images/img13.jpg"
@@ -146,7 +146,7 @@
             >
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" class="" href="/"
               ><img
                 class="pic-instagram"
                 src="./images/img14.jpg"
@@ -158,7 +158,7 @@
             >
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-food"
                 src="./images/img15.jpg"
@@ -170,7 +170,7 @@
             >
           </li>
           <li class="item-list">
-            <a href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-coffee"
                 src="./images/img16.jpg"
