--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <h3 class="title-picture">Mark Guerrero</h3>
             <p class="text-picture">Product Designer</p>
           </li>
-          <li>
+          <li class="team-img-list">
             <img
               class="tom-picture"
               src="./images/img5.jpg"
@@ -147,7 +147,7 @@
             <h3 class="title-picture">Tom Ford</h3>
             <p class="text-picture">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-img-list">
             <img
               class="camila-picture"
               src="./images/img6.jpg"
@@ -157,7 +157,7 @@
             <h3 class="title-picture">Camila Garcia</h3>
             <p class="text-picture">Marketing</p>
           </li>
-          <li>
+          <li class="team-img-list">
             <img
               class="daniele-picture"
               src="./images/img7.jpg"
