--- a/portfolio.html
+++ b/portfolio.html
@@ -146,7 +146,7 @@
             >
           </li>
           <li class="item-list">
-            <a class="pic-link link" class="" href="/"
+            <a class="pic-link link" href="/"
               ><img
                 class="pic-instagram"
                 src="./images/img14.jpg"
