--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="body">
+  <body>
     <!--Header section-->
     <header class="header">
       <nav class="header-nav">
